--- a/index.html
+++ b/index.html
@@ -1,54 +1,81 @@
- Hawam App – Privacy Policy & Terms of Service
-Privacy Policy
-Last updated: May 25, 2025
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Hawam App – Privacy Policy & Terms of Service</title>
+</head>
+<body>
+  <h1>Hawam App – Privacy Policy & Terms of Service</h1>
+  <p><strong>Last updated:</strong> May 25, 2025</p>
 
-Hawam is a private business management application used exclusively by managers and workers. It is not intended for public use or distribution.
+  <h2>Privacy Policy</h2>
+  <p>
+    Hawam is a private business management application designed exclusively for managers and workers. It is not intended for public distribution or general use.
+  </p>
 
-Information Collected
-Customer names, phone numbers, and addresses
-Appointment details and notes
-Employee names and work schedules
-Customer-related project records
-All data is securely stored using Google Firebase Firestore.
+  <h3>Information We Collect</h3>
+  <ul>
+    <li>Customer names, phone numbers, and addresses</li>
+    <li>Appointment details and related notes</li>
+    <li>Employee names, attendance, and work schedules</li>
+    <li>Project records linked to specific customers</li>
+  </ul>
+  <p>All information is securely stored using Google Firebase Firestore.</p>
 
-Permissions
-Notifications: to alert managers before upcoming appointments
-Internet access: for real-time Firebase data sync
-Manual sharing: admins can manually forward customer details and their related projects via WhatsApp or Gmail to the office for coordination purposes.
-Each customer in the app can have one or more projects assigned to them. These project records, along with the customer's contact details, can be manually shared through Gmail or WhatsApp.
+  <h3>Permissions Used</h3>
+  <ul>
+    <li><strong>Notifications:</strong> To alert managers of upcoming appointments</li>
+    <li><strong>Internet Access:</strong> Required for real-time synchronization with Firebase</li>
+    <li><strong>Manual Sharing:</strong> Admins may manually share project or customer information via WhatsApp or Gmail for coordination purposes</li>
+  </ul>
 
-Backend Services & Messaging
-Firebase Authentication: used to verify and restrict access to authorized users
-Role-based access control: ensures only managers can perform critical actions
-Firebase Cloud Functions: handle automated reminders and backend processing
-3-hour notifications: managers receive push alerts 3 hours before appointments
-24-hour SMS reminders: customers receive SMS reminders 24 hours before appointments
-Vonage API: sends SMS confirmations to customers immediately when appointments are created
-All backend communication is secure and limited to operational needs only.
+  <h3>Backend Services</h3>
+  <ul>
+    <li>Firebase Authentication: Used to verify and restrict user access</li>
+    <li>Role-Based Access Control: Ensures that only authorized managers can perform administrative actions</li>
+    <li>Firebase Cloud Functions: Automate appointment reminders and background processing</li>
+    <li>Push Notifications: Sent to managers 3 hours before scheduled appointments</li>
+    <li>SMS Reminders: Customers receive reminders 24 hours prior via Vonage API</li>
+  </ul>
+  <p>All communications are secure and limited strictly to operational purposes.</p>
 
-Data Usage & Sharing
-Data is used exclusively to manage appointments, employees, and customers. It is never sold or shared with third parties. Any customer/project info sent via WhatsApp or Gmail is initiated manually by the admin.
+  <h3>Data Usage & Sharing</h3>
+  <p>
+    Data collected by the Hawam app is used solely for managing business operations including appointments, employees, and customer records. No data is shared or sold to third parties. Any sharing through email or messaging is performed manually by the admin.
+  </p>
 
-Security
-Access is restricted through Firebase Authentication, and sensitive actions are protected through role-based permissions.
+  <h3>Security</h3>
+  <p>
+    User access is restricted through Firebase Authentication. Critical actions are protected by role-based permissions to ensure proper data security.
+  </p>
 
-Terms of Service
-Last updated: May 25, 2025
+  <h2>Terms of Service</h2>
+  <p><strong>Last updated:</strong> May 25, 2025</p>
 
-1. Use of the App
-The Hawam app is provided to businesses for internal use only. All users must be authorized staff or managers. Use of the app must comply with local laws and the terms outlined here.
+  <h3>1. Use of the App</h3>
+  <p>
+    The Hawam app is intended for internal use by authorized staff and managers only. Users must comply with all local laws and the conditions outlined in this agreement.
+  </p>
 
-2. No Warranties
-The app is provided "as is" with no guarantees regarding uptime, performance, or freedom from defects.
+  <h3>2. No Warranties</h3>
+  <p>
+    The app is provided \"as is\" without any guarantees regarding performance, uptime, or freedom from technical issues.
+  </p>
 
-3. Governing Law
-These terms are governed by the laws of Israel. Any legal disputes will be handled in courts located in Israel.
+  <h3>3. Governing Law</h3>
+  <p>
+    These terms are governed by the laws of Israel. Any legal matters will be resolved through the courts of Israel.
+  </p>
 
-Contact & Changes
-Contact Us
-For any questions regarding our Privacy Policy or Terms of Service, please contact:
+  <h2>Contact & Updates</h2>
+  <p>
+    For questions regarding this Privacy Policy or Terms of Service, please contact us at:
+    <br>Email: <a href="mailto:vynix-info@vynix.net">vynix-info@vynix.net</a>
+  </p>
 
-Email: vynix-info@vynix.net
-
-Changes to This Policy
-We may update this policy as the app evolves. Major updates will be posted here with a revised date.
+  <h3>Policy Updates</h3>
+  <p>
+    We may revise this policy as the application evolves. Any significant changes will be reflected here with an updated date.
+  </p>
+</body>
+</html>
